[gd_scene load_steps=13 format=3 uid="uid://kx0b1wpns6oq"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_u236q"]
[ext_resource type="Texture2D" uid="uid://ci6nmulf0ca27" path="res://assets/snake-background.png" id="2_c58ns"]
[ext_resource type="PackedScene" uid="uid://briicfx737wx3" path="res://scenes/snake_tile.tscn" id="2_gq72e"]
[ext_resource type="FontFile" uid="uid://cwslbnaj6we5r" path="res://assets/8-bit-hud.ttf" id="4_23fg8"]
[ext_resource type="PackedScene" uid="uid://mcy1poq4dh6l" path="res://scenes/apple.tscn" id="5_w46ew"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_phnlq"]
bg_color = Color(0, 0.179833, 0.83, 1)
anti_aliasing = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fgve8"]
size = Vector2(1000, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xgfc3"]
size = Vector2(20, 1000)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rinut"]
bg_color = Color(0.6, 0.6, 0.6, 0.678431)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7h7de"]
bg_color = Color(0.1992, 0.335873, 0.83, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7w5cx"]
bg_color = Color(0, 0.104, 0.48, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ccsyq"]
bg_color = Color(0, 0.179833, 0.83, 1)

[node name="Main" type="Node"]
script = ExtResource("1_u236q")
snake_tile_scene = ExtResource("2_gq72e")

[node name="Background" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 50)
texture = ExtResource("2_c58ns")
centered = false

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="HUD"]
texture_filter = 1
offset_right = 1000.0
offset_bottom = 50.0
theme_override_styles/panel = SubResource("StyleBoxFlat_phnlq")

[node name="Score" type="Label" parent="HUD"]
texture_filter = 1
offset_left = 8.0
offset_right = 254.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("4_23fg8")
theme_override_font_sizes/font_size = 30
text = "SCORE: "
metadata/_edit_use_anchors_ = true

[node name="Killzone" type="Area2D" parent="."]
position = Vector2(0, 50)

[node name="Top" type="CollisionShape2D" parent="Killzone"]
position = Vector2(500, -11)
shape = SubResource("RectangleShape2D_fgve8")
debug_color = Color(1, 0, 0, 1)

[node name="Right" type="CollisionShape2D" parent="Killzone"]
position = Vector2(1011, 500)
shape = SubResource("RectangleShape2D_xgfc3")
debug_color = Color(1, 0, 0, 1)

[node name="Down" type="CollisionShape2D" parent="Killzone"]
position = Vector2(500, 1011)
shape = SubResource("RectangleShape2D_fgve8")
debug_color = Color(1, 0, 0, 1)

[node name="Left" type="CollisionShape2D" parent="Killzone"]
position = Vector2(-11, 500)
shape = SubResource("RectangleShape2D_xgfc3")
debug_color = Color(1, 0, 0, 1)

[node name="Timer" type="Timer" parent="."]

[node name="GameOver" type="CanvasLayer" parent="."]
visible = false

[node name="Panel" type="Panel" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rinut")

[node name="RestartButton" type="Button" parent="GameOver"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -50.0
offset_right = 225.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_23fg8")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_7h7de")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7w5cx")
theme_override_styles/normal = SubResource("StyleBoxFlat_ccsyq")
text = "RESTART"

[node name="Apple" parent="." instance=ExtResource("5_w46ew")]

[connection signal="area_entered" from="Killzone" to="." method="_on_killzone_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="GameOver/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="area_entered" from="Apple" to="." method="_on_apple_area_entered"]
